--- a/src/components/WelcomePage/LogInForm/LogInForm.css
+++ b/src/components/WelcomePage/LogInForm/LogInForm.css
@@ -33,13 +33,14 @@ input:focus {
  }
 
 .login-submit{
-    padding: 5px 10px;
+    padding: 7px 10px;
     -webkit-appearance: none;
     appearance: none;
     border: none;
-    width: 100%;
+    width: 94%;
     color: white;
     background-color: #0894f4;
+    border-radius: 4px;
 
     font-size: .9rem;
     outline: none;
