Add roboto font and sign up button

--- a/src/components/WelcomePage/LogInForm/LogInForm.css
+++ b/src/components/WelcomePage/LogInForm/LogInForm.css
@@ -68,7 +68,7 @@ input:focus {
     align-items: center;
     gap: 10px;
 
-    color: #0065a8;
+    color: #149ff7;
  }
 
  .login-with-google-logo{
