--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -33,5 +33,15 @@
 }
 
 .post-controls{
-    padding: 7px 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 7px 15px;
+}
+
+.post-info{
+    padding:5px 15px;
+    font-weight: 400;
+    font-size: 0.9rem;
+    color: #555555;
 }
