--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -39,11 +39,28 @@
     padding: 7px 15px;
 }
 
+.post-caption{
+    margin-left: 15px;
+    display: flex;
+
+    font-size: 0.95rem;
+    margin-bottom: 2px;
+}
+
+.post-caption-username{
+    font-weight: 500;
+}
+
+.post-caption{
+    font-weight: 400;
+}
+
 .post-info{
     padding:5px 15px;
     font-weight: 400;
     font-size: 0.9rem;
     color: #555555;
+    margin-bottom: 2px;
 }
 
 .post-viewcomments{
@@ -54,7 +71,7 @@
 }  
 
 .post-timestamp{
-    padding:7px 15px;
+    padding:7px 16px;
     font-weight: 400;
     font-size: .6rem;
     color: #aaaaaa;
