Add content and sidebar header to post popup

--- a/src/components/PostPopup/PostPopup.css
+++ b/src/components/PostPopup/PostPopup.css
@@ -7,3 +7,38 @@
     background-color: rgba(0, 0, 0, 0.459);
     max-height: 100vh;
 }
+
+.postpopup-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 97%;
+}
+
+.postpopup-content{
+    height: 97%;
+}
+
+.postpopup-sidebar-container{
+    display: flex;
+    flex-direction: column;
+    height: 97%;
+    border-radius: 0px 10px 10px 0px;
+    width: 47vh;
+
+    background-color: white;
+}
+
+.postpopup-sidebar-header{
+    display: flex;
+    padding: 12px 15px;
+    gap: 15px;
+    border-bottom: 1px solid rgb(230, 230, 230);
+
+    align-items: center;
+}
+
+.postpopup-sidebar-header-icon{
+    width: 3.5vh;
+}
