--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -81,7 +81,7 @@
     width: 93%;
     padding:0 15px;
     margin-top: 5px;
-    border-top: 1px solid rgb(230, 230, 230); ;
+    border-top: 1px solid rgb(230, 230, 230);
 }
 
 input.post-addcomment-input{
