--- a/src/components/PostPopup/PostPopup.css
+++ b/src/components/PostPopup/PostPopup.css
@@ -56,6 +56,7 @@
     padding: 0px 15px;
 }
 
-.postpopup-sidebar-container .post-controls{
-    
+.postpopup-sidebar-bottom{
+    margin-top: auto;
+
 }
