--- a/src/components/PostPopup/PostPopup.css
+++ b/src/components/PostPopup/PostPopup.css
@@ -62,4 +62,6 @@
 .postpopup-sidebar-bottom{
     margin-top: auto;
     margin-bottom: 10px;
+    border-top: 1px solid rgb(230, 230, 230);
+    padding-top: 7px;
 }
